# Robotics

./: README.md
ros2_ws/install/: setup.sh
ros2_ws/install/vision_detection/share/vision_detection/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/vision_detection/: package.xml  setup.py
ros2_ws/src/vision_detection/launch/: vision_launch.py
ros2_ws/src/vision_detection/vision_detection/: package.xml  setup.py  vision_node.py
ros2_ws/src/vision_detection/vision_detection/launch/: vision_launch.py
